fullSandbox11072023/force-app/main/default/objects/Project_Team__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>This is an Agile reference to the level of commitment of the Project Team. A Pig is 100% dedicated to the Project while a Chicken either provides input and consults occasionally throughout the Project or is kept informed via status meetings.
http://en.wikipedia.org/wiki/The_Chicken_and_the_Pig</description>
    <inlineHelpText>Pigs are completely committed to delivery and outcome of the Project.
Chickens are involved, but add intermittent input or receive regular Project updates.</inlineHelpText>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chicken</fullName>
            </value>
            <value>
                <fullName>Pig</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>