fullSandbox11072023/force-app/main/default/objects/Project_Team__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <label>Team Member</label>
    <referenceTo>Team_Member__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Project_Teams</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>